change url name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://riorinakamura.github.io/todo-app",
+  "homepage": "https://riorinakamura.github.io/simple-todo-with-login/",
   "name": "login-form",
   "version": "0.1.0",
   "private": true,
