--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "antd": "^4.20.2",
-    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -48,6 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
-
